# munich-transport

./: .gitignore  .release-please-config.json  CHANGELOG.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: endpoint-discovery.md  home-assistant-request-strategy.md
scripts/: check_station_schedules.py  probe_retry_after.py  smoke_mvg.py
src/munich_transport/: __init__.py  client.py  exceptions.py  models.py  parser.py  schedules.py  transport.py  types.py
tests/: test_client.py  test_exceptions.py  test_parser.py  test_schedules.py  test_transport.py
tests/fixtures/: departures_edge_cases.json  departures_marienplatz.json  lines_marienplatz.json  locations_marienplatz.json  messages.json  nearby_stations.json  routes_marienplatz_hauptbahnhof.json  routes_transfer.json  station_marienplatz.json  station_schedules_bonner_platz.json  station_schedules_machtlfinger_strasse.json  station_schedules_marienplatz.json  station_schedules_sendlinger_tor_night.json
