[project]
name = "munich-transport"
version = "0.1.1"
description = "Async Python client for Munich public transport data."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "aiohttp>=3.10",
]

[project.urls]
Homepage = "https://github.com/g4bri3lDev/munich-transport"
Repository = "https://github.com/g4bri3lDev/munich-transport"
Issues = "https://github.com/g4bri3lDev/munich-transport/issues"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/munich_transport"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
